2007-04-20  Kouichirou Eto  <2007 eto.com>

	* qwik-service.rb: Bug fix. Append config file information for
	quickml_server. Thanks to Mr. MIWA Takayuki.

2007-04-17  Kouichirou Eto  <2007 eto.com>

	* act-diary.rb: Add description.

2007-04-16  Kouichirou Eto  <2007 eto.com>

	* act-comment.rb (plg_nomore_mcomment): New plugin for just only
	show the content of the comment.

	* act-diary.rb: New file for diary plugin.

2007-04-12  Kouichirou Eto  <2007 eto.com>

	* COPYRIGHT: Update the URL for Ms. rica's icons.

2007-04-03  Kouichirou Eto  <2007 eto.com>

	* act-keywords.rb: Do not test if we have no required library.
	* act-code.rb: Ditto.

	* check-htree.rb: Do not test beacause of the change of HTree.
	* htree-to-wabisabi.rb: Ditto.

	* act-code.rb: Change LOAD_PATH order beacause we have qwik lib in
	the ruby directory.
	* dev-replace.rb: Add a replace.
	I changed all other related files.

2007-03-26  Kouichirou Eto  <2007 eto.com>

	* ml-session.rb: Since I failed to add a new file smtp-session.rb,
	I revert to old file.
	* smtp-session.rb: Create an empty file.

	* wabisabi-diff.rb: Change diff to algorithm/diff
	* htree-diff.rb: Ditto.

2006-09-12  Kouichirou Eto  <2006@eto.com>

	* qwikgreen.css: Do not use MS P Gothic.

	* mock-sendmail.rb: Make sendmail system more general.

	* act-basic.rb (plg_window): Add class 'external'.

2006-09-10  NIIBE Yutaka  <gniibe@fsij.org>

	* debian/rules: Fix debin -> debian.

	* debian/changelog (0.8.4.3): Another trial to upload to Debian.

	* debian/docs (COPYING): Removed.
	* debian/copyright: Spell fix.  Refer common-licenses/GPL-2.
	* COPYRIGHT: Spell fix.

2006-09-08  NIIBE Yutaka  <gniibe@fsij.org>

	* debian/changelog (0.8.4.2): Another trial to upload to Debian.

	* debian/control (Tag): Removed.
	* debian/copyright: Clarified more.
	* debian/rules: Added +x bit.

2006-08-16  Kouichirou Eto  <2006@eto.com>

	* smtp-session.rb: New file.
	* ml-session.rb: Use the new class.
	